<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_padding">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="@dimen/item_image_side"
            android:layout_height="@dimen/item_image_side"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/character_image_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/value_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_image" />

        <TextView
            android:id="@+id/character_species_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/character_species_title"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_name" />

        <TextView
            android:id="@+id/character_species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="end"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="@id/character_species_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/character_species_title"
            app:layout_constraintTop_toBottomOf="@id/character_name" />

        <TextView
            android:id="@+id/character_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/character_status_title"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/character_species_title"
            app:layout_constraintTop_toBottomOf="@id/character_species" />

        <TextView
            android:id="@+id/character_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@id/character_status_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/character_status_title"
            app:layout_constraintTop_toBottomOf="@id/character_species" />

        <TextView
            android:id="@+id/character_gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/character_gender_title"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/character_species_title"
            app:layout_constraintTop_toBottomOf="@id/character_status" />

        <TextView
            android:id="@+id/character_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@id/character_gender_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/character_gender_title"
            app:layout_constraintTop_toBottomOf="@id/character_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>